--- a/gradle.properties
+++ b/gradle.properties
@@ -17,11 +17,11 @@ show_testing_output = false
 # HIGHLY RECOMMEND complying with SemVer for mod_version: https://semver.org/
 mod_version = 1.0.0
 root_package = io.bluebeaker
-mod_id = threadedskinloading
-mod_name = ThreadedSkinLoading
+mod_id = profilepatch
+mod_name = ProfilePatch
 
 # Mod Metadata (Optional)
-mod_description =
+mod_description = Small patch for authlib, add cache for non-existent player UUIDs
 mod_url =
 mod_update_json =
 # Delimit authors with commas
@@ -119,7 +119,7 @@ mixin_refmap = mixins.${mod_id}.refmap.json
 # Coremod is needed for mixin into vanilla or forge (IEarlyMixinLoader), but not needed for mixin for mods
 is_coremod = true
 coremod_includes_mod = true
-coremod_plugin_class_name = io.bluebeaker.threadedskinloading.ThreadedSkinLoadingCoreMixins
+coremod_plugin_class_name = io.bluebeaker.profilepatch.ProfilePatchCoreMixins
 
 # AssetMover
 # Convenient way to allow downloading of assets from official vanilla Minecraft servers, CurseForge, or any direct links
